--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ Text Domain: twentytwentyfour
 Tags: one-column, custom-colors, custom-menu, custom-logo, editor-style, featured-images, full-site-editing, block-patterns, rtl-language-support, sticky-post, threaded-comments, translation-ready, wide-blocks, block-styles, style-variations, accessibility-ready, blog, portfolio, news
 */
 .event-cards-container {
+    
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
@@ -82,3 +83,8 @@ Tags: one-column, custom-colors, custom-menu, custom-logo, editor-style, feature
     font-weight: bold;
     cursor: pointer;
 }
+
+.modal-close:hover {
+    color: #000;
+}
+
